services/minio/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://minio.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: minio
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: minio
    gethomepage.dev/name: Minio
spec:
  ingressClassName: nginx
  rules:
    - host: minio.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
